web-bff/deployments/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webbff
  labels:
    name: webbff
    app: webbff
